--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-.inter-<uniquifier> {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+h1 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 3rem;
+  margin-bottom: 0.5em;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
 }
