--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 
 h1 {
   font-family: 'Inter', sans-serif;
+  font-size: 2rem;
   font-weight: 400;
-  font-size: 3rem;
+  padding: 1em;
 }
 
 body {
