--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-h1 {
-  font-family: 'Inter', sans-serif;
-  font-size: 2rem;
-  font-weight: 400;
-  padding: 1em;
-}
-
 body {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
+  margin: auto;
+	max-width: 800px;
+}
+
+h1 {
+  font-family: 'Inter', sans-serif;
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:focus, a:hover {
+	text-decoration: underline;
 }
