--- a/style.css
+++ b/style.css
@@ -3,13 +3,17 @@
 body {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
-    margin: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3em;
     max-width: 800px;
+    padding: 1em;
 }
 
 h1 {
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 2em;
     font-weight: 500;
 }
 
